refactor(MySnake): Moved keyPressed() function to Play Class This was done so that the function could handle changing the scene without using two-way association. I also made AnimationTimer an attribute so that it could be signalled to pause from outside the Play Class